# buscadminas

./: CMakeLists.txt  demo_ncurses  demo_ncurses.cpp
client/: main_client.cpp
include/: GameLogic.hpp  GameUI.hpp  SocketClient.hpp  SocketServer.hpp  UdpDiscoveryClient.hpp  UdpDiscoveryServer.hpp  entrypoints.h
include/client/: Client.h
include/common/: Board.h  ConsoleUtils.h  NetworkCommon.h  NetworkUtils.h  ScoreSystem.h
include/server/: Server.h
server/: main_server.cpp
src/: GameLogic.cpp  GameUI.cpp  SocketClient.cpp  SocketServer.cpp  UdpDiscoveryClient.cpp  UdpDiscoveryServer.cpp  main.cpp
src/client/: CMakeLists.txt  Client.cpp  main_client.cpp
src/common/: Board.cpp  CMakeLists.txt  ConsoleUtils.cpp  NetworkUtils.cpp  ScoreSystem.cpp
src/common/output/: scores.csv
src/server/: CMakeLists.txt  Server.cpp  main_server.cpp
